# szakdolgozat

./: menetrend.md
app/: Cargo.toml
app/src/: cassandra.rs  main.rs
app/src/cassandra/: ast_queries.rs  database.rs  types.rs
app/src/cassandra/ast_queries/: create_type_queries.rs  keyspace_queries.rs  table_queries.rs
app/src/postgres/: types.rs
app/src/util/: query.rs
db/cassandra/: compose.yml  init.sh  start.sh  stop.sh
db/peldak/: nosql-keyspace-dump-pelda.md  pelda_kepalbumok_adatbazis.sql  sql-adatbazis-dump-pelda.md  sql-nosql-irany.md
db/postgres/: compose.yml  start.sh  stop.sh
tree-sitter-cql/: Cargo.toml  README.md  example.cql  grammar.js  package.json  parser.exp  parser.lib
tree-sitter-cql/bindings/rust/: build.rs  lib.rs
tree-sitter-cql/src/: grammar.json  node-types.json  parser.c
