[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
eframe = "0.29.1"
egui = "0.29.1"
rfd = "0.15.0"
tree-sitter = "0.22.6"
tree-sitter-cql = "0.2.0"
tree-sitter-sequel = "0.3.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
# opt-level = 2

[profile.release]
opt-level = 3
# opt-level = 2
codegen-units = 1
lto = "fat"
strip = true
